--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,7 +22,7 @@
     <mat-sidenav-content class="main-content" position="center">
       <!-- Sidebar Toggle Button -->
       <div class="sidebar-button">
-        <button mat-icon-button class="toggle-sidebar" (click)="sidenav.toggle()">
+        <button mat-icon-button (click)="sidenav.toggle()">
           <mat-icon svgIcon="menu-bar"></mat-icon>
         </button>
       </div>
