--- a/src/app/components/repair-sheet/repair-sheet.component.html
+++ b/src/app/components/repair-sheet/repair-sheet.component.html
@@ -4,40 +4,38 @@
     <div class="repair-icon">
       <mat-icon [svgIcon]="getRepairIcon()"></mat-icon>
     </div>
-    
+
     <div class="sheet-content">
       <h3>{{ data.title || 'Repair Required' }}</h3>
       <p>{{ data.message || 'A problem was detected. You can try repairing it below.' }}</p>
-      
+
       @if (getRepairDetails()) {
-        <div class="repair-details">
-          @for (detail of getRepairDetails(); track $index) {
-            <div class="detail-item">
-              <mat-icon svgIcon="{{detail.icon}}"></mat-icon>
-              <span><strong>{{detail.label}}:</strong> {{detail.value}}</span>
-            </div>
-          }
+      <div class="repair-details">
+        @for (detail of getRepairDetails(); track $index) {
+        <div class="detail-item">
+          <mat-icon svgIcon="{{detail.icon}}"></mat-icon>
+          <span><strong>{{detail.label}}:</strong> {{detail.value}}</span>
         </div>
+        }
+      </div>
       }
     </div>
   </div>
 
   <!-- Actions Section -->
   <div class="sheet-actions">
-    <button 
-      type="button"
-      class="repair-button"
-      (click)="repair()" 
-      [disabled]="installing"
+    <button mat-raised-button [disabled]="installing" class="repair-button" (click)="repair()" [disabled]="installing"
       [attr.aria-label]="installing ? 'Repairing in progress' : 'Start repair process'">
       @if (installing) {
-        <div class="loading-content">
-          <mat-progress-spinner diameter="20" mode="indeterminate"></mat-progress-spinner>
-          <span>{{ getRepairProgressText() }}</span>
-        </div>
+        <ng-container>
+          <mat-icon [svgIcon]="installing ? 'refresh' : 'download'" [class.animate-spin]="installing"></mat-icon>
+          {{ getRepairProgressText() }}
+        </ng-container>
       } @else {
-        <mat-icon svgIcon="{{getRepairButtonIcon()}}"></mat-icon>
-        <span>{{ getRepairButtonText() }}</span>
+        <ng-container>
+          <mat-icon [svgIcon]="getRepairButtonIcon()"></mat-icon>
+          {{ getRepairButtonText() }}
+        </ng-container>
       }
     </button>
   </div>
